Fixed wrap

--- a/CodeHelper/wwwroot/css/site.css
+++ b/CodeHelper/wwwroot/css/site.css
@@ -20,6 +20,10 @@ html {
     }
 }
 
+.overflow-wrap {
+    overflow-wrap: anywhere !important;
+}
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
